[package]
name = "poseidonos-rtype"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "poseidonos"
path = "src/main-rust.rs"

[dependencies]
error-code = "2.3.1"
lazy_static = "1.4.0"
log = "0.4.0"
env_logger = "0.9.0"
rand = "0.8.5"
static_assertions = "1.1.0"
toml = "0.5.9"
serde = { version = "1.0", features = ["derive"] }
strum_macros = "0.24.3"
crossbeam = "0.8.2"

[build-dependencies]
bindgen = "0.60.1"
